--- a/reactfront/package.json
+++ b/reactfront/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts-ts": "2.16.0"
+    "react": ">=16.4.2",
+    "react-dom": ">=16.4.2",
+    "react-scripts-ts": "^3.1.0",
+    "safer-eval": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -14,12 +15,12 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^23.1.2",
-    "@types/node": "^10.3.6",
-    "@types/react": "^16.4.2",
-    "@types/react-dom": "^16.0.6",
-    "moment": "^2.22.2",
-    "react-dates": "^17.0.0",
-    "typescript": "^2.9.2"
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.13.4",
+    "@types/react": "^16.8.13",
+    "@types/react-dom": "^16.8.4",
+    "moment": "^2.24.0",
+    "react-dates": "^20.1.0",
+    "typescript": "^3.4.3"
   }
 }
