--- a/reactfront/package.json
+++ b/reactfront/package.json
@@ -6,7 +6,8 @@
     "react": ">=16.4.2",
     "react-dom": ">=16.4.2",
     "react-scripts-ts": "^3.1.0",
-    "safer-eval": "^1.3.2"
+    "safer-eval": "^1.3.2",
+    "webpack-dev-server": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
