--- a/reactfront/package.json
+++ b/reactfront/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "js-yaml": "^3.13.1",
     "react": ">=16.4.2",
     "react-dom": ">=16.4.2",
     "react-scripts-ts": "^3.1.0",
     "safer-eval": "^1.3.2",
-    "webpack-dev-server": "^3.3.1"
+    "webpack": "^4.0.0",
+    "webpack-dev-server": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
