--- a/reactfront/package.json
+++ b/reactfront/package.json
@@ -7,9 +7,7 @@
     "react": ">=16.4.2",
     "react-dom": ">=16.4.2",
     "react-scripts-ts": "^3.1.0",
-    "safer-eval": "^1.3.2",
-    "webpack": "^4.0.0",
-    "webpack-dev-server": "^3.7.2"
+    "safer-eval": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
