--- a/reactfront/package.json
+++ b/reactfront/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/history": "^4.7.2",
+    "@types/react-router-dom": "^4.3.4",
+    "history": "^4.9.0",
     "js-yaml": "^3.13.1",
     "react": ">=16.4.2",
     "react-dom": ">=16.4.2",
+    "react-router-dom": "^5.1.0",
     "react-scripts-ts": "^3.1.0",
     "safer-eval": "^1.3.2"
   },
